[package]
name = "aranet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arrayref = "0.3.9"
bluer = { version = "0.17.3", features = ["full"] }
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
prometheus = "0.13.4"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
uuid = "1.12.1"
